# slime_mold_simulation

./: CMakeLists.txt  main.cu
